<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.OtpActivity"
    android:background="@drawable/activitybg"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/otplogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_otp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="28sp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:text="@string/verify_otp"
        android:layout_margin="8dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/enter_the_otp_sent_on_your_registered_phone_number"
        android:textAlignment="center"
        android:layout_margin="8dp"
        />
    <EditText
        android:id="@+id/otptext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:padding="20dp"
        android:hint="@string/enter_otp"
        android:textColorHint="@color/lightgrey"
        android:background="@drawable/otptext"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"/>
    <Button
        android:id="@+id/Submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/borderedbutton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:text="@string/submit"
        />

    <Button
        android:id="@+id/resendotp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/borderlessbutton"
        android:layout_gravity="center_horizontal"
        android:layout_margin="12dp"
        android:text="@string/resend_otp"
    />
</LinearLayout>