<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/activitybg"
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/toplogin">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/white"
        android:text="@string/login"
        android:layout_gravity="center_horizontal"
        android:padding="12dp"
        android:layout_margin="12dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phonenumberlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textappearance">
        <EditText
            android:id="@+id/phonenumbertext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="12dp"
            android:padding="12dp"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_phone_number"
            android:drawableStart="@drawable/ic_person"
            tools:targetApi="lollipop" />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/loginbutton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/borderedbutton"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="12sp"
        android:padding="8dp"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:text="@string/or"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">
    <Button
        android:id="@+id/gotosingupbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/borderlessbutton"
        android:layout_alignParentStart="true"
        android:text="@string/signup"/>
        <Button
            android:id="@+id/forgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:theme="@style/borderlessbutton"
            android:text="@string/forgotpassword"/>
    </RelativeLayout>
    <Button
        android:id="@+id/loginasadmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/borderlessbutton"
        android:layout_marginTop="100dp"
        android:text="@string/login_as_admin"/>

</LinearLayout>