<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddsociallinksActivity"
    android:orientation="vertical"
    android:background="@drawable/activitybg"
    android:id="@+id/toplinks">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:weightSum="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:alpha="0.5"
            android:text="@string/name"
            />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="12sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:alpha="0.5"
            android:text="@string/mobile_no"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="4dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="4dp"
        android:weightSum="2">
        <TextView
            android:id="@+id/addlinksname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            />
        <TextView
            android:id="@+id/addlinksmobileno"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:padding="4dp"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:alpha="0.5"
        android:text="@string/loksabha_constituency"
        />
    <TextView
        android:id="@+id/addlinkslc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="4dp"
        android:textColor="@color/white"
        android:textAlignment="textStart"
        android:alpha="0.5"
        android:text="@string/assembly_constituency"
        />
    <TextView
        android:id="@+id/addlinksac"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="12dp"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="12sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:textColor="@color/white"
        android:text="@string/connect_your_social_media_accounts"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/facebooklayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/textappearance"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/facebooktext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:inputType="text"
                android:hint="@string/enter_facebook_id"
                android:drawableStart="@drawable/ic_facebook"
                android:backgroundTint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/twitterlayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/textappearance"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/twittertext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:hint="@string/enter_twitter_id"
                android:inputType="text"
                android:drawableStart="@drawable/ic_twitter"
                android:backgroundTint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/whatsapplayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/textappearance"
            app:errorEnabled="true"
            android:layout_marginTop="8dp">
            <EditText
                android:id="@+id/whatsapptext"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="8dp"
                android:hint="@string/enter_whatsapp_number"
                android:inputType="phone"
                android:drawableStart="@drawable/ic_whatsapp"
                android:backgroundTint="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <EditText
            android:id="@+id/referalcodeaddlinks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_referal_code"
            android:padding="8dp"
            android:inputType="text"
            android:backgroundTint="@color/white"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:layout_marginTop="8dp"
            android:theme="@style/borderedbutton"/>
    </LinearLayout>

</LinearLayout>