<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignupActivity"
    android:orientation="vertical"
    android:background="@drawable/activitybg"
    android:gravity="center"
    android:id="@+id/topsignup">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/namelayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:hintTextAppearance="@style/textappearance"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/nametext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_person"
            android:hint="@string/enter_name"
            android:padding="8dp"
            android:drawablePadding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emaillayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:hintTextAppearance="@style/textappearance"
        app:errorEnabled="true">
        <EditText
            android:id="@+id/emailtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:hint="@string/enter_e_mail"
            android:drawableStart="@drawable/ic_email"
            android:padding="8dp"
            android:drawablePadding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        app:counterEnabled="true"
        app:counterMaxLength="10"
        app:errorEnabled="true"
        app:hintTextAppearance="@style/textappearance"
        >
        <EditText
            android:id="@+id/numbertext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:drawableStart="@drawable/ic_phone"
            android:hint="@string/enter_phone_number"
            android:padding="8dp"
            android:drawablePadding="8dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Spinner
        android:id="@+id/lcspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:layout_margin="12dp"
        android:backgroundTint="@color/white"
        />
    <Spinner
        android:id="@+id/acspinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="12dp"
        android:backgroundTint="@color/white"
        />
    <Button
        android:id="@+id/createaccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/borderedbutton"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/create_account" />

</LinearLayout>